# path_tracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CPM.cmake
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  fullscreen.frag  fullscreen.vert  geometry.cpp  geometry.hpp  main.cpp  path_tracer.cpp  ray_trace.rchit  ray_trace.rgen  ray_trace.rmiss  render.comp  renderer.cpp  renderer.hpp  renderer_vulkan_h.cpp  renderer_vulkan_h.hpp  renderer_vulkan_hpp.cpp  scene.cpp  scene.hpp  scope_guard.hpp  shader.rchit  shader.rgen  shader.rmiss  shader_common.glsl  simd.hpp  stb_image.cpp  utility.cpp  utility.hpp  utils.cpp  utils.hpp  vec3.hpp  vk_mem_alloc.cpp  vma.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/shaders/: closest_hit_common.glsl  dielectric.rchit  diffuse.rchit  emissive.rchit  shader.rgen  shader.rmiss  shader_common.glsl  specular.rchit
src_cpu/: CMakeLists.txt  simd.hpp  vec3.hpp
src_vulkan/: CMakeLists.txt  geometry.cpp  main.cpp  ray_trace.rmiss  vulkan_renderer.hpp
test/: geometry.hpp  main.cpp  renderer.cpp  renderer.hpp  shader.rchit  utility.hpp
